Add CSV import strategy (#147)
* Add CSV import strategy

* Update test

* Fix line-feeds

* Extend tests